--- a/server/Views/Edit.html
+++ b/server/Views/Edit.html
@@ -43,10 +43,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Template</label>
                 <div class="col-sm-10">
-                    <select class="form-control" id="template"
-                            ng-options="template.path for template in Templates track by template.path"
-                            ng-model="Message.template"
-                            ng-checked="(template == Message.template)">
+                    <select class="form-control" id="template" ng-options="template.path for template in Templates track by template.path" ng-model="Message.template">
                         <option value="">-- choose template --</option>
                     </select>
                 </div>
@@ -61,7 +58,7 @@
                 <label class="control-label col-sm-2">Screens</label>
 
                 <label class="checkbox-inline" ng-repeat="screen in Screens">
-                    <input class="" type="checkbox" id="{{screen.number}}" ng-checked="(Message.screen.indexOf(screen.number) != -1)"/>
+                    <input class="" type="checkbox" title="{{screen.number}}" id="{{screen.number}}" ng-checked="(Message.screen.indexOf(screen.number) != -1)"/>
                     {{screen.location}}
                 </label>
             </div>
