--- a/server/Views/Edit.html
+++ b/server/Views/Edit.html
@@ -37,7 +37,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Name</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" value={{Message.name}}>
+                    <input type="text" class="form-control" id="name" ng-model="Message.name">
                 </div>
             </div>
             <div class="form-group">
@@ -49,16 +49,16 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-2">Display Time (sec)</label>
+                <label class="control-label col-sm-2">Display Time (milliseconds)</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="dispTimeSec" value={{Message.dispTimeSec}}>
+                    <input type="text" class="form-control" id="dispTimeSec" ng-model="Message.dispTimeSec">
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2">Screens</label>
 
                 <label class="checkbox-inline" ng-repeat="screen in Screens">
-                    <input class="" type="checkbox" id="screen{{$index}}" ng-checked="Message.screen.indexOf(screen.number) > -1"/>
+                    <input type="checkbox" checklist-model="Message.screen" checklist-value="screen" ng-checked="Message.screen.indexOf(screen.number) > -1">
                     {{screen.location}}
                 </label>
             </div>
@@ -68,7 +68,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2">Text {{index}}: </label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="text{{index}}" value={{Message.text[index-1]}}>
+                        <input type="text" class="form-control" id="text{{index}}" ng-model="Message.text[index-1]">
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2">Image {{index}}: </label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="image{{index}}" value={{Message.images[index-1]}}>
+                        <input type="text" class="form-control" id="image{{index}}" ng-model="Message.images[index-1]">
                     </div>
                 </div>
             </div>
@@ -86,19 +86,19 @@
                     <div class="form-group" id="TimeFrame">
                         <label class="control-label col-sm-2">From date:</label>
                         <div class="col-sm-4">
-                            <input type="date" class="form-control" id="formDate" ng-model="s_TimeFrames[$index].FromDate" placeholder="dd-MM-yyyy">
+                            <input type="date" class="form-control" id="formDate{{$index+1}}" ng-model="frame.FromDate" placeholder="dd-MM-yyyy">
                         </div>
                         <label class="control-label col-sm-2">To date:</label>
                         <div class="col-sm-4">
-                            <input type="date" class="form-control" id="toDate" ng-model="s_TimeFrames[$index].ToDate" placeholder="dd-MM-yyyy">
+                            <input type="date" class="form-control" id="toDate{{$index+1}}" ng-model="frame.ToDate" placeholder="dd-MM-yyyy">
                         </div>
                         <label class="control-label col-sm-2">From time:</label>
                         <div class="col-sm-4">
-                            <input type="time" class="form-control" id="fromTime" ng-model="s_TimeFrames[$index].FromTime" placeholder="HH:mm:ss">
+                            <input type="time" class="form-control" id="fromTime{{$index+1}}" ng-model="frame.FromTime" placeholder="HH:mm:ss">
                         </div>
                         <label class="control-label col-sm-2">To time:</label>
                         <div class="col-sm-4">
-                            <input type="time" class="form-control" id="toTime" ng-model="s_TimeFrames[$index].ToTime" placeholder="HH:mm:ss">
+                            <input type="time" class="form-control" id="toTime{{$index+1}}" ng-model="frame.ToTime" placeholder="HH:mm:ss">
                         </div>
                         <label class="control-label col-sm-2">Days:</label>
                         <div class="form-group col-sm-10">
@@ -112,7 +112,7 @@
 
             <div class="form-group">
                 <div class="btn btn-large btn-block">
-                    <button type="submit" class="btn btn-default">Save</button>
+                    <button type="submit" ng-click="saveChanges()" class="btn btn-default">Save</button>
                 </div>
             </div>
         </form>
