--- a/server/Views/Create.html
+++ b/server/Views/Create.html
@@ -59,7 +59,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Screens</label>
                 <label class="checkbox-inline" ng-repeat="screen in Screens">
-                    <input class="" type="checkbox" title="{{screen.number}}" id="{{screen.number}}" ng-model="Message.screen"/>
+                    <input class="" type="checkbox" title="{{screen.number}}" id="{{screen.number}}" checklist-model="Message.screen" checklist-value="screen"/>
                     {{screen.location}}
                 </label>
             </div>
@@ -69,7 +69,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2">Text {{index}}: </label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="text{{index}}"  ng-model="Message.text">
+                        <input type="text" class="form-control" id="text{{index}}"  ng-model="Message.text[index-1]">
                     </div>
                 </div>
             </div>
@@ -78,41 +78,42 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2">Image {{index}}: </label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="image{{index}}"  ng-model="Message.images">
+                        <input type="text" class="form-control" id="image{{index}}"  ng-model="Message.images[index-1]">
                     </div>
                 </div>
             </div>
-            <div>
-                <div id="TimeFrame">
-                    <h3>Time Frame</h3>
-                    <input type="button" id="addTF" value="add more" />
 
-                    <div class="form-group" id="TimeFrame0">
+            <div id="TimeFrame">
+                <div ng-repeat="timef in Message.TimeFrame">
+                    <div class="form-group" id="TimeFrame{{$index}}">
+                        <h3>Time Frame {{$index+1}}</h3>
                         <label class="control-label col-sm-2">From date:</label>
                         <div class="col-sm-4">
-                            <input type="date" class="form-control" id="fromdate">
+                            <input type="date" class="form-control" id="fromdate{{$index}}" ng-model="Message.TimeFrame[$index].FromDate" />
                         </div>
                         <label class="control-label col-sm-2">To date:</label>
                         <div class="col-sm-4">
-                            <input type="date" class="form-control" id="todate" />
+                            <input type="date" class="form-control" id="todate{{$index}}" ng-model="Message.TimeFrame[$index].ToDate" />
                         </div>
                         <label class="control-label col-sm-2">From time:</label>
                         <div class="col-sm-4">
-                            <input type="time" class="form-control" id="FromTime">
+                            <input type="time" class="form-control" id="FromTime{{$index}}" ng-model="Message.TimeFrame[$index].FromTime" />
                         </div>
                         <label class="control-label col-sm-2">To time:</label>
                         <div class="col-sm-4">
-                            <input type="time" class="form-control" id="ToTime">
+                            <input type="time" class="form-control" id="ToTime{{$index}}" ng-model="Message.TimeFrame[$index].ToTime" />
                         </div>
                         <label class="control-label col-sm-2">Days:</label>
                         <div class="form-group col-sm-10">
                             <label class="checkbox-inline" ng-repeat="day in ['sunday','monday','tuesday','wednesday','thursday','friday','saturday']">
-                                <input class="" type="checkbox" id="days" name="days" value="{{$index}}" />
+                                <input class="" type="checkbox" id="days{{$index}}" name="days" value="{{$index}}" ng-model="Message.TimeFrame[$index].days" />
                                 {{day}}
                             </label>
                         </div>
                     </div>
                 </div>
+                <input type="button" id="addTF" value="add more" ng-click="Message.TimeFrame.push({})" />
+
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
