--- a/server/Views/Update.html
+++ b/server/Views/Update.html
@@ -6,6 +6,7 @@
 
     <script type="text/javascript" src="/javascripts/angular/angular.js"></script>
     <script type="text/javascript" src="/javascripts/angular/angular-route.js"></script>
+    <script type="text/javascript" src="/javascripts/checklist-model.js"></script>
     <script type="text/javascript" src="/javascripts/display.js"></script>
     <script type="text/javascript" src="/javascripts/jquery.js"></script>
     <script type="text/javascript" src="/javascripts/socket.io-client/socket.io.js"></script>
