--- a/server/Views/Edit.html
+++ b/server/Views/Edit.html
@@ -44,9 +44,13 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Template</label>
                 <div class="col-sm-10">
-                    <select class="form-control" id="template" ng-options="template.path for template in Templates track by template.path" ng-model="Message.template">
-                        <option value="">-- choose template --</option>
+                    <select class="form-control" ng-model="Message.template">
+                        <option ng-repeat="template in Templates" value="{{template.path}}">{{template.path}}</option>
                     </select>
+
+                    <!--<select class="form-control" ng-options="template.path for template in Templates track by template.path" ng-value="template.path" ng-model="Message.template">-->
+                        <!--<option value="">&#45;&#45; choose template &#45;&#45;</option>-->
+                    <!--</select>-->
                 </div>
             </div>
             <div class="form-group">
