--- a/server/Views/Item.html
+++ b/server/Views/Item.html
@@ -25,6 +25,15 @@
 </head>
 <body ng-controller="ItemCtrl">
     <div class="container">
+        <header>
+            <h3 class="text-muted">Messages</h3>
+            <ul class="nav nav-pills">
+                <li><a href="/list">List</a></li>
+                <li><a href="/Create">Create</a></li>
+                <li><a href="/Manage">Manage</a></li>
+                <li><a href="/About">About</a></li>
+            </ul>
+        </header>
         <h2>message</h2>
         <p>
             <a class="btn btn-primary" href="/Edit?name={{Message.name}}" role="button">Edit &raquo;</a>
