--- a/server/Views/Edit.html
+++ b/server/Views/Edit.html
@@ -38,25 +38,21 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Name</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" ng-model="Message.name">
+                    <label class="form-control">{{Message.name}}</label>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2">Template</label>
                 <div class="col-sm-10">
                     <select class="form-control" ng-model="Message.template">
-                        <option ng-repeat="template in Templates" value="{{template.path}}">{{template.path}}</option>
+                        <option ng-repeat="template in Templates" ng-value="template.path">{{template.path}}</option>
                     </select>
-
-                    <!--<select class="form-control" ng-options="template.path for template in Templates track by template.path" ng-value="template.path" ng-model="Message.template">-->
-                        <!--<option value="">&#45;&#45; choose template &#45;&#45;</option>-->
-                    <!--</select>-->
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2">Display Time (milliseconds)</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="dispTimeSec" ng-model="Message.dispTimeSec">
+                    <input type="number" class="form-control" id="dispTimeSec" ng-model="Message.dispTimeSec">
                 </div>
             </div>
             <div class="form-group">
@@ -86,34 +82,47 @@
                     </div>
                 </div>
             </div>
-            <div ng-repeat="frame in Message.TimeFrame">
-                <h3>Time Frame {{$index+1}}</h3>
-                    <div class="form-group" id="TimeFrame">
-                        <label class="control-label col-sm-2">From date:</label>
-                        <div class="col-sm-4">
-                            <input type="date" class="form-control" ng-model="frame.FromDate" placeholder="dd-MM-yyyy">
-                        </div>
-                        <label class="control-label col-sm-2">To date:</label>
-                        <div class="col-sm-4">
-                            <input type="date" class="form-control" ng-model="frame.ToDate" placeholder="dd-MM-yyyy">
-                        </div>
-                        <label class="control-label col-sm-2">From time:</label>
-                        <div class="col-sm-4">
-                            <input type="time" class="form-control" ng-model="frame.FromTime" placeholder="HH:mm:ss">
-                        </div>
-                        <label class="control-label col-sm-2">To time:</label>
-                        <div class="col-sm-4">
-                            <input type="time" class="form-control" ng-model="frame.ToTime" placeholder="HH:mm:ss">
-                        </div>
-                        <label class="control-label col-sm-2">Days:</label>
-                        <div class="form-group col-sm-10">
-                            <label class="checkbox-inline" ng-repeat="day in ['sunday','monday','tuesday','wednesday','thursday','friday','saturday']">
-                                <input class="" type="checkbox" ng-model="frame.days[$index]"/>
-                                {{day}}
-                            </label>
-                        </div>
-                    </div>
-            </div>
+                 <ul ng-repeat="timeFrame in Message.TimeFrame" class="nav nav-tabs nav-stacked">
+                     <li>
+                         <div class="hover-btn">
+                             <button type="button" ng-click="removeTimeFrame($index)" class="close" data-dismiss="alert">
+                                 <span aria-hidden="true">×</span>
+                                 <span class="sr-only">Close</span>
+                             </button>
+                         </div>
+                        <h3>Time Frame {{$index+1}}
+                        </h3>
+
+                         <div class="form-group" id="TimeFrame">
+                             <label class="control-label col-sm-2">From date:</label>
+                             <div class="col-sm-4">
+                                 <input type="date" class="form-control" ng-model="timeFrame.FromDate" placeholder="dd-MM-yyyy">
+                             </div>
+                             <label class="control-label col-sm-2">To date:</label>
+                             <div class="col-sm-4">
+                                 <input type="date" class="form-control" ng-model="timeFrame.ToDate" placeholder="dd-MM-yyyy">
+                             </div>
+                             <label class="control-label col-sm-2">From time:</label>
+                             <div class="col-sm-4">
+                                 <input type="time" class="form-control" ng-model="timeFrame.FromTime" placeholder="HH:mm:ss">
+                             </div>
+                             <label class="control-label col-sm-2">To time:</label>
+                             <div class="col-sm-4">
+                                 <input type="time" class="form-control" ng-model="timeFrame.ToTime" placeholder="HH:mm:ss">
+                             </div>
+                             <label class="control-label col-sm-2">Days:</label>
+                             <div class="form-group col-sm-10">
+                                 <label class="checkbox-inline" ng-repeat="day in ['sunday','monday','tuesday','wednesday','thursday','friday','saturday']">
+                                     <input class="" type="checkbox" ng-model="timeFrame.days[$index]"/>
+                                     {{day}}
+                                 </label>
+                             </div>
+                         </div>
+                     </li>
+
+            </ul>
+
+            <button type="button" ng-click="addTimeFrame()" class="btn glyphicon glyphicon-plus"></button>
 
             <div class="form-group">
                 <div class="btn btn-large btn-block">
