--- a/server/Views/Create.html
+++ b/server/Views/Create.html
@@ -45,26 +45,25 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Template</label>
                 <div class="col-sm-10">
-                    <select class="form-control" id="template" ng-options="template.path for template in Templates track by template.path" ng-model="Message.template">
+                    <select class="form-control" ng-model="Message.template">
                         <option value="">-- choose template --</option>
+                        <option ng-repeat="template in Templates"  ng-value="template.path">{{template.path}}</option>
                     </select>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2">Dispy Time (sec)</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="dispTimeSec" ng-model="Message.dispTimeSec">
+                    <input type="number" class="form-control" id="dispTimeSec" ng-model="Message.dispTimeSec" min="0">
                 </div>
             </div>
-
+            <label class="control-label col-sm-2">Screens</label>
             <div class="form-group">
-                <label class="control-label col-sm-2">Screens</label>
                 <label class="checkbox-inline" ng-repeat="screen in Screens">
-                    <input class="" type="checkbox" title="{{screen.number}}" id="{{screen.number}}" checklist-model="Message.screen" checklist-value="screen"/>
+                    <input type="checkbox" title="{{screen.number}}" checklist-model="Message.screen" checklist-value="screen.number">
                     {{screen.location}}
                 </label>
             </div>
-
             <h3>Texts</h3>
             <div ng-repeat="index in [1,2,3,4,5,6,7,8,9,10]">
                 <div class="form-group">
@@ -106,14 +105,14 @@
                         </div>
                         <label class="control-label col-sm-2">Days:</label>
                         <div class="form-group col-sm-10">
-                            <label class="checkbox-inline" ng-repeat="day in days">
-                                <input class="" type="checkbox" checklist-model="day[$index]" checklist-value="day.val" ng-true-value="true" ng-false-value="false"/>
-                                {{day.name}}
+                            <label class="checkbox-inline" ng-repeat="day in Message.TimeFrame[$index].days track by $index">
+                                <input class="" type="checkbox" ng-model="Message.TimeFrame[$parent.$index].days[$index]" name="$parent.$index+'day'+[$index]" ng-true-value="true" ng-false-value="false" />
+                                {{daysName[$index]}}
                             </label>
                         </div>
                     </div>
                 </div>
-                <input type="button" id="addTF" value="add more" ng-click="Message.TimeFrame.push({})" />
+                <input type="button" id="addTF" value="add more" ng-click="Message.TimeFrame.push({ days:[false,false,false,false,false,false,false] } )" />
 
             </div>
             <div class="form-group">
