--- a/server/Views/Create.html
+++ b/server/Views/Create.html
@@ -84,7 +84,7 @@
             </div>
 
             <div id="TimeFrame">
-                <div ng-repeat="timef in Message.TimeFrame">
+                <div ng-repeat="timef in Message.TimeFrame track by $index">
                     <div class="form-group" id="TimeFrame{{$index}}">
                         <h3>Time Frame {{$index+1}}</h3>
                         <label class="control-label col-sm-2">From date:</label>
