--- a/server/Views/Edit.html
+++ b/server/Views/Edit.html
@@ -1,4 +1,4 @@
-﻿﻿<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" ng-app="MessagesApp">
 <head>
     <script src="/javascripts/angular/angular.js"></script>
