--- a/server/public/stylesheets/Display.css
+++ b/server/public/stylesheets/Display.css
@@ -1,8 +1,4 @@
-﻿ body {
-     background-color:#558C89;
- }
-
-#MainContiner {
+﻿#MainContiner {
     background-color: #558C89;
     width: 800px;
     margin: 0px auto;
