upload image done. working on checking file name on ypload

--- a/server/Views/Edit.html
+++ b/server/Views/Edit.html
@@ -84,8 +84,10 @@
             <!--<form>-->
                 <!--<input type="file" ng-file-select="imageSelected($image)" accept="'image/*'">-->
                 <!--<input class="btn btn-default"  type="submit" ng-click="uploadImage()" >-->
+
             <!--</form>-->
 
+                                                    <!-- uploadPic($files) -->
             <button class="btn btn-default" ngf-select="upload($files)">
                 Upload Image
             </button>
