add new screen -done

--- a/server/Views/Create.html
+++ b/server/Views/Create.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="/javascripts/List.js"></script>
     <script type="text/javascript" src="/javascripts/Create.js"></script>
     <script type="text/javascript" src="/javascripts/Item.js"></script>
+    <script type="text/javascript" src="/javascripts/Screens.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,7 +33,7 @@
             <ul class="nav nav-pills">
                 <li><a href="/list">List</a></li>
                 <li class="active"><a href="/Create">Create</a></li>
-                <li><a href="/Manage">Manage</a></li>
+                <li><a href="/ScreensManagement">Manage</a></li>
                 <li><a href="/About">About</a></li>
             </ul>
 
