--- a/server/Views/Edit.html
+++ b/server/Views/Edit.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="/javascripts/ScreensManagement.js"></script>
     <script type="text/javascript" src="/javascripts/Create.js"></script>
     <script type="text/javascript" src="/javascripts/Item.js"></script>
+    <script type="text/javascript" src="/javascripts/Screens.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,7 +35,7 @@
             <ul class="nav nav-pills">
                 <li><a href="/list">List</a></li>
                 <li><a href="/Create">Create</a></li>
-                <li><a href="/Manage">Manage</a></li>
+                <li><a href="/ScreensManagement">Manage</a></li>
                 <li><a href="/About">About</a></li>
             </ul>
         </header>
