--- a/server/Views/Update.html
+++ b/server/Views/Update.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="/javascripts/List.js"></script>
     <script type="text/javascript" src="/javascripts/Create.js"></script>
     <script type="text/javascript" src="/javascripts/Item.js"></script>
+    <script type="text/javascript" src="/javascripts/Screens.js"></script>
 
     <meta charset="UTF-8" />
     <title>Update</title>
