--- a/server/Views/index.html
+++ b/server/Views/index.html
@@ -14,5 +14,6 @@
     <script type="text/javascript" src="/javascripts/List.js"></script>
     <script type="text/javascript" src="/javascripts/Create.js"></script>
     <script type="text/javascript" src="/javascripts/Item.js"></script>
+    <script type="text/javascript" src="/javascripts/Screens.js"></script>
 </ng-view>
 </html>
