delete screen -done

--- a/server/Views/Create.html
+++ b/server/Views/Create.html
@@ -34,6 +34,7 @@
                 <li><a href="/list">List</a></li>
                 <li class="active"><a href="/Create">Create</a></li>
                 <li><a href="/ScreensManagement">Manage</a></li>
+                <a href="/Screens">Screens</a></li>
                 <li><a href="/About">About</a></li>
             </ul>
 
