--- a/server/Views/Item.html
+++ b/server/Views/Item.html
@@ -35,6 +35,7 @@
                 <li><a href="/list">List</a></li>
                 <li><a href="/Create">Create</a></li>
                 <li><a href="/ScreensManagement">Manage</a></li>
+                <a href="/Screens">Screens</a></li>
                 <li><a href="/About">About</a></li>
             </ul>
         </header>
