--- a/server/Views/Screens.html
+++ b/server/Views/Screens.html
@@ -22,19 +22,7 @@
     <script type="text/javascript" src="/javascripts/Item.js"></script>
     <script type="text/javascript" src="/javascripts/Screens.js"></script>
 
-
     <script src="http://maps.google.com/maps/api/js?sensor=false&libraries=places" type="text/javascript"></script>
-
-    <script type="text/javascript">
-
-        /*
-        // load the map
-        $(function(){
-            Initialize();
-        });
-*/
-
-    </script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -88,7 +76,30 @@
                 <button type="button" class="btn btn-default" ng-click="editScreen(screen)">Edit</button>
             </div>
             <div class="col-sm-1">
-                delete
+                <button type="button" class="btn btn-default" ng-click="deleteScreen(screen)">Delete</button>
+            </div>
+        </div>
+
+        <div id="deleteScreen" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Delete screen</h4>
+                        </div>
+                        <div class="modal-body">
+                            are you sure you want to delete screen-
+                            <label class="col-sm-2 form-control" style="font-weight: bold">
+                                {{deleteScreen.number}}. {{deleteScreen.location}}
+                            </label>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="saveDeleteScreen(deleteScreen)">Yes</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">no</button>
+                        </div>
+
+                </div>
             </div>
         </div>
 
